finished everything but test cases and itneraction

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
+  background-image: url(https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?w=940&h=650&auto=compress&cs=tinysrgb)
 }
 .title, .addDancerButton{
   padding:5px 12px;
@@ -21,7 +22,72 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
+  height: 5%;
+  width: 4%;
+  background-color: red;
+  border-radius:100%;
   position:absolute;
 }
+
+/*
+make Blue Dancers!
+*/
+.blue {
+  background-color: blue;
+}
+
+/*
+Grow and Shrink Dancer
+*/
+
+.growAndShrink {
+
+  height: 25%;
+  width: 25%;
+  background-color: green;
+  border: 0px;
+  animation-name: stretch;
+  animation-direction: alternate;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-in;
+  animation-play-state: running;
+  animation-iteration-count: infinite;
+  animation-delay: 0;
+}
+
+@keyframes stretch{
+  0% {
+    transform: scale(.1);
+    background-color: pink;
+    border-radius:  100%;
+  }
+  50%{
+    background-color: yellow;
+  }
+  100%{
+  transform:scale(2);
+  }
+}
+
+.explosion{
+  background-image: url(https://media.giphy.com/media/ahza0v6s5pSxy/giphy.gif);
+  border: 0px;
+  
+}
+
+.hover{
+  height: 30%;
+  width: 15%;
+  background-image: url(untitled.png);
+  background-size: cover;
+}
+
+/* line up */
+
+/* if there is a collision, dancer disappears */
+
+/*if clicked on a dancer, turn it into a sheep */
+
+/* add two tests */
+
+
