--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,14 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  /*background-color:#444;*/
   font-size: 18px;
+  background-image: url(https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?w=940&h=650&auto=compress&cs=tinysrgb)
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
-  background-image: url(https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?w=940&h=650&auto=compress&cs=tinysrgb)
 }
-.title, .addDancerButton{
-  padding:5px 12px;
-  float:right;
-}
-.topbar{
-  height:32px;
-  background-color: #555;
-}
-.title{
-  background-color: #777;
-}
+
 .dancer{
   height: 5%;
   width: 4%;
@@ -91,3 +81,14 @@ Grow and Shrink Dancer
 /* add two tests */
 
 
+.title, .addDancerButton{
+  padding:5px 12px;
+  float:right;
+}
+.topbar{
+  height:32px;
+  background-color: #555;
+}
+.title{
+  background-color: #555;
+}
